# udacity-python-course

./: .gitignore  README.md  codecov.yml
.github/workflows/: meme-generator.yml  near-earth-objects.yml
2.24-phone-t9/: ngrams-10k.txt
21-finding-anagrams/: anagram.py
24-phone-t9/: attribution.txt  gold.py  helper.py  t9.py
3.13-map-filter/: map-filter.py
3.16-functional-fuzzing/: helper.py
3.19-memoize-decorator/: memoize.py
3.22-runtime-type-checker/: checker.py  helper.py
3.7-create-profile/: profile.py
4.24-online-shopping/: review.py  user.py
5.11-finding-routes/: README.md
5.7-nobel-prizes/: prize.json
lessons/2.21-finding-anagrams/: words.txt
lessons/3.16-functional-fuzzing/: fuzzer.py
lessons/3.19-memoize-decorator/: fib.py
lessons/4.10-building-a-class/: customer.py
lessons/5.4-plain-text-io/: count.py  hamlet.txt
lessons/5.7-nobel-prizes/: helper.py
projects/meme-generator/: .flake8  README.md  pyproject.toml  requirements.txt  run-app.sh  setup.py
projects/meme-generator/src/: app.py  meme.py  pyproject.toml
projects/meme-generator/src/MemeGenerator/: engine.py
projects/meme-generator/src/QuoteEngine/: CsvIngestor.py  DocxIngestor.py  IngestorInterface.py  PdfIngestor.py  TxtIngestor.py  ingestor.py  model.py
projects/meme-generator/src/_data/SimpleLines/: SimpleLines.txt
projects/meme-generator/tests/integration/: test_cli.py  test_csv.py  test_docx.py  test_engine.py  test_formats.py  test_pdf.py  test_txt.py  test_webapp.py
projects/meme-generator/tests/unit/: test_ingestor.py  test_model.py
(+51 files in other folders)
