[project]
name = "meme_generator"
version = "1.0.0"
description = "Meme generator project for the Udacity Intermediate Python nanodegree."
authors = ["Gabriele Catania gabriele.ctn@gmail.com"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ilCatania/udacity-python-course/tree/master/projects/meme-generator"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = "../.."

[tool.black]
line-length = 100
include = '''
(
    ^/tests/.*[.]py$
  | ^/src/.*[.]py$
  | ^/setup[.]py
)
'''
exclude = '''
(
    __pycache__
  | ^/env/.*
)
'''

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:Using or importing the ABCs from \'collections\' instead of from \'collections.abc\':DeprecationWarning'
]